# l4-book

./: .gitignore  Cargo.toml  README.md
benches/: replay.rs
docs/: api.md  l4-protocol.md
examples/: dwellir_debug_log_sp500.rs  dwellir_live_sp500.rs  replay_capture.rs
prompt-exports/: oracle-plan-2026-06-07-154357-counterfactual-apis-4e59.md
scripts/: capture_l4.py
src/: book.rs  dwellir.rs  level.rs  lib.rs  types.rs
tests/: book_basic.rs
