[package]
name = "l4-book"
version = "0.1.0"
edition = "2024"
description = "Standalone L4 limit order book with per-order wallet attribution."
license = "MIT"
repository = "https://github.com/your/l4-book"
readme = "README.md"

[lib]
name = "l4_book"
path = "src/lib.rs"

[features]
default = []
# Pulls in serde_json and enables the `dwellir` module for decoding captured
# Dwellir / Hyperliquid L4 JSONL into venue-agnostic book operations.
dwellir = ["dep:serde_json"]

[dependencies]
serde_json = { version = "1", optional = true }

[dev-dependencies]
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }
serde_json = "1"

[[bench]]
name = "replay"
harness = false
required-features = ["dwellir"]

[[example]]
name = "replay_capture"
required-features = ["dwellir"]

[profile.release]
lto = "thin"
codegen-units = 1
